# KnightShock

./: 404.html  README.md  aramco3.yaml  glarborg.yaml  gri30.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: index.md
docs/examples/planning/: absorption.ipynb
docs/reference/: absorption.md  constants.md  figures.md  kinetics.md
docs/stylesheets/: extra.css
examples/: simulation_multiprocessing.py
examples/planning/absorption/: index.html
knightshock/: __init__.py  absorption.py  constants.py  figures.py  kinetics.py  pool.py  poolclasstest.py
license/: index.html
reference/absorption/: index.html
reference/constants/: index.html
reference/figures/: index.html
reference/kinetics/: index.html
search/: search_index.json
shocktube/: __init__.py  figures.py  kinetics.py  plan.py
