[tool.poetry]
name = "knightshock"
version = "0.1.0"
description = ""
authors = ["Cory Kinney <corykinney@knights.ucf.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cantera = "^2.6.0"
matplotlib = "^3.5.0"
numpy = "^1.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
